# OZ_codingSchool

10_desktop/OZ_3/: pyproject.toml
10_desktop/OZ_3/.config_secret/: secrets.json
10_desktop/OZ_3/accounts/: forms.py  models.py  serializers.py  urls.py  views.py
10_desktop/OZ_3/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_accounts_account_type_alter_accounts_bank_code.py
10_desktop/OZ_3/config/: urls.py
10_desktop/OZ_3/config/settings/: base.py  local.py  production.py
10_desktop/OZ_3/templates/: hello.html  login.html  profile.html  register.html
10_desktop/OZ_3/templates/accounts/: account_detail.html  account_form.html  account_list.html
10_desktop/OZ_3/templates/transaction_history/: transaction_history_form.html  transaction_history_list.html
10_desktop/OZ_3/transaction_history/: forms.py  models.py  serializers.py  urls.py  views.py
10_desktop/OZ_3/transaction_history/migrations/: 0001_initial.py  0002_alter_transaction_history_payment_method_and_more.py
10_desktop/OZ_3/users/: admin.py  forms.py  models.py  serializers.py  tokens.py  urls.py  views.py
10_desktop/OZ_3/users/migrations/: 0001_initial.py
10_desktop/Travel_Plan/: .gitignore  docker-compose.yaml  manage.py  pyproject.toml
10_desktop/Travel_Plan/Travel_Plan/: asgi.py  urls.py  wsgi.py
10_desktop/Travel_Plan/Travel_Plan/config/: settings.py
10_desktop/Travel_Plan/mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
10_desktop/Travel_Plan/mysql_data/#innodb_redo/: #ib_redo9
10_desktop/Travel_Plan/mysql_data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
10_desktop/Travel_Plan/mysql_data/mysql/: general_log_213.sdi  slow_log_214.sdi
10_desktop/Travel_Plan/mysql_data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  (+76 more)
10_desktop/backend/: docker-compose.yaml  pyproject.toml  test.sh
10_desktop/backend/config/: settings.env  settings.py
10_desktop/backend/mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
10_desktop/main_blog/: docker-compose.yml  dockerfile  pyproject.toml
10_desktop/main_blog/app/: alembic.ini  database.py  main.py  models.py
10_desktop/main_blog/mysql_data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
10_desktop/새싹반1/: README.md  app.py  models.py  pyproject.toml
10_desktop/새싹반1/templates/: detail.html  edit.html  index.html  register.html
(+537 files in other folders)
