[tool.poetry]
name = "comeback"
version = "0.1.0"
description = ""
authors = ["vivid <jeajun18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
isort = "^5.13.2"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
coverage = "^7.6.5"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
cryptography = "^43.0.3"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
types-pymysql = "^1.1.0.20241103"
faker = "^33.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
