[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["mr-cliche-git <mr.cliche7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
jinja2 = "^3.1.4"
pytest = "^8.3.3"
httpx = "^0.27.2"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
