[tool.poetry]
name = "simple-user-service"
version = "0.1.0"
description = ""
authors = ["noelbird <lduldu00228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
setuptools = "^74.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
